feat: implementa cadastro de produtos e configuração de preço/tara
